--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee Shop</title>
-    <link rel="stylesheet" href="./styles/app.css" />
+    <link rel="stylesheet" href="styles/app.css" />
   </head>
-  <body></body>
+  <body class="font-iranyekan"></body>
 </html>
