structure of header and adding a basic style

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="styles/app.css" />
+    <link rel="icon" href="images/fav-icon.png" type="image/png" />
   </head>
-  <body class="font-iranyekan"></body>
+  <body class="font-iranyekan bg-gray-100 dark:bg-zink-800">
+    <!-- Icons -->
+    <svg class="hidden">
+      <symbol
+        id="arrow-right-end-on-rectangle"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25"
+        />
+      </symbol>
+
+      <symbol
+        id="moon"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
+        />
+      </symbol>
+
+      <symbol
+        id="shopping-cart"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+        />
+      </symbol>
+    </svg>
+    <header
+      class="w-[90%] h-24 pl-4 pr-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50"
+    >
+      <div class="flex justify-between border w-full">
+        <!-- Logo & Menu -->
+        <nav class="flex gap-x-9">
+          <div>
+            <img src="images/app-logo.png" alt="Coffee Logo" />
+          </div>
+          <ul class="flex gap-x-9 items-center">
+            <li class=""><a href="#">صفحه اصلی</a></li>
+            <!-- Has Sub Menu -->
+            <li class="">
+              <a href="#">فروشگاه</a>
+              <!-- Sub Menu -->
+              <ul class="hidden">
+                <li><a href="#">قهوه ویژه در سطح جهانی</a></li>
+                <li><a href="#">قهوه درجه یک</a></li>
+                <li><a href="#">ترکیبات تجاری</a></li>
+                <li><a href="#">کپسول قهوه </a></li>
+                <li><a href="#">قهوه زینو برزیلی</a></li>
+              </ul>
+            </li>
+            <li class=""><a href="#">دیکشنری</a></li>
+            <li class=""><a href="#">بلاگ</a></li>
+            <li class=""><a href="#">درباره ما</a></li>
+            <li class=""><a href="#">تماس با ما</a></li>
+          </ul>
+        </nav>
+        <!-- Cart & Theme Toggle & Login Link -->
+        <div class="flex items-center">
+          <!-- Cart Icon & Theme Switch Btn -->
+          <div class="inline-flex gap-x-5">
+            <div>
+              <svg class="w-8 h-8">
+                <use xlink:href="#shopping-cart" class=""></use>
+              </svg>
+            </div>
+            <div>
+              <svg class="w-8 h-8"><use xlink:href="#moon" class=""></use></svg>
+            </div>
+          </div>
+          <!-- Login Link -->
+          <a href="#" class="inline-flex">
+            <svg class="w-8 h-8">
+              <use xlink:href="#arrow-right-end-on-rectangle" class=""></use>
+            </svg>
+            ورود | ثبت نام
+          </a>
+        </div>
+      </div>
+    </header>
+    <script src="scripts/app.js"></script>
+  </body>
 </html>
