styling navigation of header

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/app.css" />
     <link rel="icon" href="images/fav-icon.png" type="image/png" />
   </head>
-  <body class="font-iranyekan bg-gray-100 dark:bg-zink-800">
+  <body class="font-iranyekan bg-gray-100 dark:bg-zinc-800">
     <!-- Icons -->
     <svg class="hidden">
       <symbol
@@ -58,7 +58,7 @@
       </symbol>
     </svg>
     <header
-      class="w-[90%] h-24 pl-4 pr-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50"
+      class="fixed top-9 left-0 right-0 w-[90%] h-24 px-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50"
     >
       <div class="flex justify-between border w-full">
         <!-- Logo & Menu -->
@@ -66,8 +66,8 @@
           <div>
             <img src="images/app-logo.png" alt="Coffee Logo" />
           </div>
-          <ul class="flex gap-x-9 items-center">
-            <li class=""><a href="#">صفحه اصلی</a></li>
+          <ul class="flex gap-x-9 items-center text-xl text-gray-300">
+            <li class="text-orange-200"><a href="#">صفحه اصلی</a></li>
             <!-- Has Sub Menu -->
             <li class="">
               <a href="#">فروشگاه</a>
