changing the base font

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/app.css" />
     <link rel="icon" href="images/fav-icon.png" type="image/png" />
   </head>
-  <body class="font-iranyekan bg-gray-100 dark:bg-zinc-800">
+  <body class="font-arad bg-gray-100 dark:bg-zinc-800">
     <!-- Icons -->
     <svg class="hidden">
       <symbol
