fixing a bug in fonts

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,9 @@
             <img src="images/app-logo.png" alt="Coffee Logo" />
           </div>
           <ul class="flex gap-x-9 items-center text-xl text-gray-300">
-            <li class="text-orange-200"><a href="#">صفحه اصلی</a></li>
+            <li class="text-orange-200 font-aradMedium">
+              <a href="#">صفحه اصلی</a>
+            </li>
             <!-- Has Sub Menu -->
             <li class="">
               <a href="#">فروشگاه</a>
