styling left side of header

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <header
       class="fixed top-9 left-0 right-0 w-[90%] h-24 px-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50"
     >
-      <div class="flex justify-between border w-full">
+      <div class="flex justify-between w-full">
         <!-- Logo & Menu -->
         <nav class="flex gap-x-9">
           <div>
@@ -89,7 +89,7 @@
           </ul>
         </nav>
         <!-- Cart & Theme Toggle & Login Link -->
-        <div class="flex items-center">
+        <div class="flex items-center text-xl text-orange-200 gap-x-10">
           <!-- Cart Icon & Theme Switch Btn -->
           <div class="inline-flex gap-x-5">
             <div>
@@ -101,12 +101,14 @@
               <svg class="w-8 h-8"><use xlink:href="#moon" class=""></use></svg>
             </div>
           </div>
+          <!-- Divide Border -->
+          <div class="w-px h-14 bg-white/20"></div>
           <!-- Login Link -->
-          <a href="#" class="inline-flex">
+          <a href="#" class="inline-flex gap-x-2">
             <svg class="w-8 h-8">
               <use xlink:href="#arrow-right-end-on-rectangle" class=""></use>
             </svg>
-            ورود | ثبت نام
+            <div>ورود | ثبت نام</div>
           </a>
         </div>
       </div>
