adding the tighter letter spacing

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,9 @@
           <div>
             <img src="images/app-logo.png" alt="Coffee Logo" />
           </div>
-          <ul class="flex gap-x-9 items-center text-xl text-gray-300">
+          <ul
+            class="flex gap-x-9 items-center text-xl text-gray-300 tracking-tightest"
+          >
             <li class="text-orange-200 font-aradMedium">
               <a href="#">صفحه اصلی</a>
             </li>
@@ -89,16 +91,18 @@
           </ul>
         </nav>
         <!-- Cart & Theme Toggle & Login Link -->
-        <div class="flex items-center text-xl text-orange-200 gap-x-10">
+        <div
+          class="flex items-center text-xl text-orange-200 gap-x-10 tracking-tightest"
+        >
           <!-- Cart Icon & Theme Switch Btn -->
           <div class="inline-flex gap-x-5">
             <div>
               <svg class="w-8 h-8">
-                <use xlink:href="#shopping-cart" class=""></use>
+                <use xlink:href="#shopping-cart"></use>
               </svg>
             </div>
             <div>
-              <svg class="w-8 h-8"><use xlink:href="#moon" class=""></use></svg>
+              <svg class="w-8 h-8"><use xlink:href="#moon"></use></svg>
             </div>
           </div>
           <!-- Divide Border -->
@@ -106,7 +110,7 @@
           <!-- Login Link -->
           <a href="#" class="inline-flex gap-x-2">
             <svg class="w-8 h-8">
-              <use xlink:href="#arrow-right-end-on-rectangle" class=""></use>
+              <use xlink:href="#arrow-right-end-on-rectangle"></use>
             </svg>
             <div>ورود | ثبت نام</div>
           </a>
