adding a custom varient for accessing children through parent

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       </symbol>
     </svg>
     <header
-      class="fixed top-9 left-0 right-0 w-[90%] h-24 px-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50"
+      class="fixed top-9 left-0 right-0 w-[90%] h-24 px-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50 backdrop-blur-[6px]"
     >
       <div class="flex justify-between w-full">
         <!-- Logo & Menu -->
