aligning sub menu and  nav

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             <img src="images/app-logo.png" alt="Coffee Logo" />
           </div>
           <ul
-            class="flex gap-x-9 items-center text-xl text-gray-300 tracking-tightest"
+            class="flex gap-x-9 items-center text-xl text-gray-300 tracking-tightest child:h-14 child:leading-[56px]"
           >
             <li class="text-orange-200 font-aradMedium">
               <a href="#">صفحه اصلی</a>
@@ -77,7 +77,7 @@
               <a href="#">فروشگاه</a>
               <!-- Sub Menu -->
               <div
-                class="absolute child:block w-52 p-6 rounded-xl bg-white border-t-[3px] border-orange-300 text-base text-zinc-700 dark:bg-zinc-700 dark:text-white space-y-4 tracking-normal shadow-normal child-hover:text-orange-300 child:transition-colors"
+                class="absolute top-full child:block w-52 p-6 rounded-xl bg-white border-t-[3px] border-orange-300 text-base text-zinc-700 dark:bg-zinc-700 dark:text-white space-y-4 tracking-normal shadow-normal child-hover:text-orange-300 child:transition-colors"
               >
                 <a href="#">قهوه</a>
                 <a href="#"> ویژه در سطح جهانی</a>
