--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="styles/app.css" />
     <link rel="icon" href="images/fav-icon.png" type="image/png" />
+    <script type="text/javascript">
+      document.documentElement.classList.toggle(
+        "dark",
+        localStorage.theme === "dark" ||
+          (!("theme" in localStorage) &&
+            window.matchMedia("(prefers-color-scheme: dark)").matches)
+      );
+    </script>
   </head>
   <body class="font-arad bg-gray-100 dark:bg-zinc-800">
     <!-- Icons -->
@@ -56,6 +64,35 @@
           d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
         />
       </symbol>
+      <symbol
+        id="sun"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
+        />
+      </symbol>
+      <symbol
+        id="chevron-left"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M15.75 19.5 8.25 12l7.5-7.5"
+        />
+      </symbol>
     </svg>
     <header
       class="fixed top-9 left-0 right-0 w-[90%] h-24 px-10 py-5 flex items-center rounded-3xl mx-auto bg-black/50 backdrop-blur-[6px]"
@@ -77,7 +114,7 @@
               <a href="#">فروشگاه</a>
               <!-- Sub Menu -->
               <div
-                class="absolute top-full child:inline-block w-52 p-6 invisible group-hover:visible transition-all rounded-xl bg-white border-t-[3px] border-orange-300 text-base text-zinc-700 dark:bg-zinc-700 dark:text-white space-y-4 tracking-normal shadow-normal child-hover:text-orange-300 child:transition-colors"
+                class="absolute top-full child:inline-block w-52 p-6 invisible group-hover:visible delay-75 transition-all rounded-xl bg-white border-t-[3px] border-orange-300 text-base text-zinc-700 dark:bg-zinc-700 dark:text-white space-y-4 tracking-normal shadow-normal child-hover:text-orange-300 child:transition-colors"
               >
                 <a href="#">قهوه</a>
                 <a href="#"> ویژه در سطح جهانی</a>
@@ -100,16 +137,113 @@
           <!-- Cart Icon & Theme Switch Btn -->
           <div class="inline-flex gap-x-5">
             <!-- Cart icon -->
-            <div>
-              <div class="py-3">
+            <div class="relative group">
+              <div class="py-3 cursor-pointer">
                 <svg class="w-8 h-8"><use href="#shopping-cart"></use></svg>
               </div>
               <!-- Cart box -->
-              <div></div>
+              <div
+                class="w-[400px] opacity-0 invisible group-hover:visible group-hover:opacity-100 delay-75 transition-all shadow-normal bg-white dark:bg-zinc-700 text-zinc-700 dark:text-white p-5 absolute left-0 top-full border-t-[3px] border-orange-300 rounded-xl"
+              >
+                <!-- Cart Heading -->
+                <div
+                  class="font-aradMedium flex justify-between items-center tracking-tighter text-xs"
+                >
+                  <span class="text-gray-300">۱ خرید</span>
+                  <a class="flex items-center justify-between text-orange-300">
+                    مشاهده سبد خرید
+                    <svg class="w-5 h-5" fill="current-color">
+                      <use href="#chevron-left"></use></svg
+                  ></a>
+                </div>
+                <!-- Cart Body -->
+                <div
+                  class="child:py-5 divide-y divide-gray-100 dark:divide-white/10 border-b border-gray-300 dark:border-b-white/10"
+                >
+                  <div class="flex items-center justify-between gap-x-2">
+                    <div class="w-30 h-30">
+                      <img src="images/products/p1.png" alt="product 1" />
+                    </div>
+                    <div>
+                      <h4
+                        class="text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                      >
+                        قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                      </h4>
+                      <span
+                        class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                        >۱۴.۵۰۰ تومان تخفیف</span
+                      >
+                      <div>
+                        ۱۷۵,۰۰۰ <span class="text-sm font-arad">تومان</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="flex items-center justify-between gap-x-2">
+                    <div class="w-30 h-30">
+                      <img src="images/products/p3.png" alt="product 1" />
+                    </div>
+                    <div>
+                      <h4
+                        class="text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                      >
+                        قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                      </h4>
+                      <span
+                        class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                        >۱۴.۵۰۰ تومان تخفیف</span
+                      >
+                      <div>
+                        ۱۷۵,۰۰۰ <span class="text-sm font-arad">تومان</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="flex items-center justify-between gap-x-2">
+                    <div class="w-30 h-30">
+                      <img src="images/products/p2.png" alt="product 1" />
+                    </div>
+                    <div>
+                      <h4
+                        class="text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
+                      >
+                        قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                      </h4>
+                      <span
+                        class="text-xs text-teal-600 dark:text-emerald-500 font-aradSemiBold tracking-tighter"
+                        >۱۴.۵۰۰ تومان تخفیف</span
+                      >
+                      <div>
+                        ۱۷۵,۰۰۰ <span class="text-sm font-arad">تومان</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Cart Footer -->
+                <div class="flex justify-between items-center mt-4">
+                  <div class="flex flex-col justify-between">
+                    <span class="tracking-tighter text-xs text-gray-300"
+                      >مبلغ قابل پرداخت</span
+                    >
+                    <span class="">
+                      ۱۷۵,۰۰۰ <span class="text-sm font-arad">تومان</span>
+                    </span>
+                  </div>
+                  <button
+                    class="bg-teal-600 dark:bg-emerald-500 hover:bg-teal-700 dark:hover:bg-emerald-600 text-white text-base tracking-tightest rounded-md py-2 px-3"
+                  >
+                    ثبت سفارش
+                  </button>
+                </div>
+              </div>
             </div>
             <!-- moon icon -->
-            <div class="py-3">
-              <svg class="w-8 h-8"><use href="#moon"></use></svg>
+            <div id="theme-toggle-btn" class="py-3 hover:cursor-pointer">
+              <svg class="inline-block dark:hidden w-8 h-8">
+                <use href="#moon"></use>
+              </svg>
+              <svg class="hidden dark:inline-block w-8 h-8">
+                <use href="#sun"></use>
+              </svg>
             </div>
           </div>
           <!-- Divide Border -->
