optimazation for input validation

--- a/public/index.html
+++ b/public/index.html
@@ -251,7 +251,8 @@
                       <h4
                         class="w-64 text-zinc-700 dark:text-white line-clamp-2 font-aradMedium text-base tracking-normal mb-3"
                       >
-                        قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی
+                        قهوه اسپرسو بن مانو مدل پریسکا مدل ۲۵۰ گرمی قهوه اسپرسو
+                        بن مانو مدل پریسکا مدل ۲۵۰ گرمی
                       </h4>
                       <div class="flex justify-between items-center">
                         <!-- Number input  -->
