adding function to nav close and open btns

--- a/public/index.html
+++ b/public/index.html
@@ -631,7 +631,7 @@
               </div>
             </div>
             <!-- moon icon -->
-            <div class="theme-toggle-btn *:py-3 hover:cursor-pointer">
+            <div class="theme-toggle-btn py-3 hover:cursor-pointer">
               <svg class="inline-block dark:hidden w-8 h-8">
                 <use href="#moon"></use>
               </svg>
