--- a/public/index.html
+++ b/public/index.html
@@ -668,104 +668,124 @@
       </div>
       <!-- Nav Menu -->
       <div
-        class="nav-menu hidden fixed z-20 right-0 top-0 bg-white dark:bg-zinc-700 min-h-screen w-64 px-4 pt-3 transition-all overflow-auto"
+        class="nav-menu hidden fixed z-20 right-0 top-0 bg-white dark:bg-zinc-700 w-64 px-4 pt-3 pb-12 transition-all h-screen custom-scrollbar-1 custom-scrollbar-1-dark overflow-y-auto"
       >
-        <!-- Nav Menu Header -->
-        <div class="flex justify-between items-center">
-          <div class="flex gap-x-3.5">
-            <svg class="h-10 w-[41px]"><use href="#logo"></use></svg>
-            <svg class="h-10 w-[100px]"><use href="#logo-type"></use></svg>
-          </div>
-          <!-- Nav Close Btn -->
-          <div class="nav-close-btn cursor-pointer">
-            <svg class="w-5 h-5 dark:text-white">
-              <use href="#x-mark"></use>
-            </svg>
-          </div>
-        </div>
-        <!-- Nav Menu Body -->
-        <div
-          class="child:pr-2.5 my-6 py-7 border-y border-gray-100 dark:border-white/10"
-        >
-          <div class="h-10 rounded-md flex items-center bg-orange-200/20 mb-7">
-            <a href="#" class="inline-flex gap-x-2 text-orange-300"
-              ><svg class="w-5 h-5">
-                <use href="#home"></use></svg
-              ><span>صفحه اصلی</span></a
-            >
-          </div>
-          <ul
-            class="child:flex child:items-center space-y-5 child:h-10 text-zinc-700 dark:text-white child-hover:text-orange-300 transition-all child:transition-colors"
-          >
-            <li class="justify-between cursor-pointer">
-              <div class="inline-flex gap-x-2">
-                <svg class="w-5 h-5">
-                  <use href="#shopping-bag"></use></svg
-                >فروشگاه
-              </div>
-              <svg class="w-4 h-4 -rotate-90">
-                <use href="#chevron-left "></use>
+        <div class="custom-rtl">
+          <!-- Nav Menu Header -->
+          <div class="flex justify-between items-center">
+            <div class="flex gap-x-3.5">
+              <svg class="h-10 w-[41px]"><use href="#logo"></use></svg>
+              <svg class="h-10 w-[100px]"><use href="#logo-type"></use></svg>
+            </div>
+            <!-- Nav Close Btn -->
+            <div class="nav-close-btn cursor-pointer">
+              <svg class="w-5 h-5 dark:text-white">
+                <use href="#x-mark"></use>
               </svg>
-            </li>
-            <li>
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
-                ><svg class="w-5 h-5"><use href="#message"></use></svg
-                >دیکشنری</a
+            </div>
+          </div>
+          <!-- Nav Menu Body -->
+          <div
+            class="child:pr-2.5 my-6 py-7 border-y border-gray-100 dark:border-white/10"
+          >
+            <div
+              class="h-10 rounded-md flex items-center bg-orange-200/20 mb-7"
+            >
+              <a href="#" class="inline-flex gap-x-2 text-orange-300"
+                ><svg class="w-5 h-5">
+                  <use href="#home"></use></svg
+                ><span>صفحه اصلی</span></a
               >
-            </li>
+            </div>
+            <ul
+              class="child:flex space-y-6 text-zinc-700 dark:text-white transition-all child:transition-colors"
+            >
+              <li class="flex-col">
+                <div class="shop-title flex justify-between cursor-pointer">
+                  <a class="inline-flex gap-x-2">
+                    <svg class="w-5 h-5">
+                      <use href="#shopping-bag"></use></svg
+                    >فروشگاه
+                  </a>
+                  <svg id="shop-sub-menu-btn" class="w-4 h-4 -rotate-90">
+                    <use href="#chevron-left "></use>
+                  </svg>
+                </div>
+                <div
+                  id="shop-sub-menu"
+                  class="mt-3 hidden flex-col pr-7 space-y-3 transition-all"
+                >
+                  <a href="#">قهوه ویژه</a>
+                  <a href="#">ویژه در سطح جهانی</a>
+                  <a href="#">قهوه درجه یک</a>
+                  <a href="#">ترکیبات تجاری</a>
+                  <a href="#">کپسول قهوه</a>
+                  <a href="#">قهوه زینو برزیلی</a>
+                </div>
+              </li>
+              <li class="items-center">
+                <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+                  ><svg class="w-5 h-5"><use href="#message"></use></svg
+                  >دیکشنری</a
+                >
+              </li>
+              <li class="items-center">
+                <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+                  ><svg class="w-5 h-5"><use href="#briefcase"></use></svg
+                  >درباره ما</a
+                >
+              </li>
+              <li class="items-center">
+                <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+                  ><svg class="w-5 h-5"><use href="#document-text"></use></svg
+                  >بلاگ</a
+                >
+              </li>
+              <li class="items-center">
+                <a href="#" class="inline-flex gap-x-2 cursor-pointer"
+                  ><svg class="w-5 h-5"><use href="#phone"></use></svg>تماس با
+                  ما</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- Nav Menu Footer -->
+          <ul
+            class="child:text-orange-300 child:pr-2.5 child:h-10 child:flex child:items-center"
+          >
             <li>
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
-                ><svg class="w-5 h-5"><use href="#briefcase"></use></svg>درباره
-                ما</a
+              <a
+                href="#"
+                class="inline-flex gap-x-2 items-center cursor-pointer"
               >
+                <svg class="w-5 h-5">
+                  <use href="#arrow-right-end-on-rectangle"></use>
+                </svg>
+                <span class="xl:flex items-center gap-x-3">
+                  <span>ورود</span>
+                  <span>|</span>
+                  <span>ثبت نام</span>
+                </span>
+              </a>
+            </li>
+            <li class="theme-toggle-btn child:gap-x-2 child:cursor-pointer">
+              <div class="dark:hidden flex gap-x-2 cursor-pointer">
+                <svg class="w-5 h-5"><use href="#moon"></use></svg>
+                <span>تم تیره</span>
+              </div>
+              <div class="hidden dark:flex">
+                <svg class="w-5 h-5"><use href="#sun"></use></svg>
+                <span>تم روشن</span>
+              </div>
             </li>
             <li>
               <a href="#" class="inline-flex gap-x-2 cursor-pointer"
-                ><svg class="w-5 h-5"><use href="#document-text"></use></svg
-                >بلاگ</a
-              >
-            </li>
-            <li>
-              <a href="#" class="inline-flex gap-x-2 cursor-pointer"
-                ><svg class="w-5 h-5"><use href="#phone"></use></svg>تماس با
-                ما</a
+                ><svg class="w-5 h-5"><use href="#shopping-cart"></use></svg>سبد
+                خرید</a
               >
             </li>
           </ul>
         </div>
-        <!-- Nav Menu Footer -->
-        <ul
-          class="child:text-orange-300 child:pr-2.5 child:h-10 child:flex child:items-center"
-        >
-          <li>
-            <a href="#" class="inline-flex gap-x-2 items-center cursor-pointer">
-              <svg class="w-5 h-5">
-                <use href="#arrow-right-end-on-rectangle"></use>
-              </svg>
-              <span class="xl:flex items-center gap-x-3">
-                <span>ورود</span>
-                <span>|</span>
-                <span>ثبت نام</span>
-              </span>
-            </a>
-          </li>
-          <li class="theme-toggle-btn child:gap-x-2 child:cursor-pointer">
-            <div class="dark:hidden flex gap-x-2 cursor-pointer">
-              <svg class="w-5 h-5"><use href="#moon"></use></svg>
-              <span>تم تیره</span>
-            </div>
-            <div class="hidden dark:flex">
-              <svg class="w-5 h-5"><use href="#sun"></use></svg>
-              <span>تم روشن</span>
-            </div>
-          </li>
-          <li>
-            <a href="#" class="inline-flex gap-x-2 cursor-pointer"
-              ><svg class="w-5 h-5"><use href="#shopping-cart"></use></svg>سبد
-              خرید</a
-            >
-          </li>
-        </ul>
       </div>
       <!-- Logo type -->
       <svg class="w-[100px] h-10">
